Fix table alignment on homepage

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -2860,7 +2860,7 @@ tablesorter.css
 	padding: 4px;
 	border-top: 1px solid;
 	border-left: 1px solid;
-	vertical-align: baseline;
+	vertical-align: middle;
 }
 
 /* remove extra border from left edge */
